--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="btnNotes" class="btn">筆記</button>
         <button id="btnInv" class="btn">背包</button>
         <button id="btnMute" class="btn">音樂</button>
+        <button id="btnCredits" class="btn">授權</button>
         <button id="btnReset" class="btn btn-danger">重置</button>
       </div>
     </div>
@@ -52,6 +53,18 @@
         <button class="btn" id="closeInv">關閉</button>
       </div>
       <div id="inv" class="inv"></div>
+    </div>
+
+    <div id="panelCredits" class="panel" aria-hidden="true">
+      <div class="panel-hd">
+        <div class="panel-title">授權 / Credits</div>
+        <button class="btn" id="closeCredits">關閉</button>
+      </div>
+      <div class="credits">
+        <p>本遊戲只使用授權清楚、可商用素材（優先 CC0）。</p>
+        <p>Poly Haven / ambientCG / Freesound（CC0 篩選）等來源將逐筆列出。</p>
+        <p>完整清單請看 repo 內 <code>CREDITS.md</code>。</p>
+      </div>
     </div>
 
     <div id="hint" class="hint" aria-hidden="true">
